@@ -23,13 +23,7 @@ ADD_LIBRARY (gl2ps SHARED ${GL2PS_DIR}/gl2ps.c ${png_files} ${zlib_files})
 INSTALL(FILES ${GL2PS_DIR}/gl2ps.h DESTINATION ${OCE_WIN_BUNDLE_INSTALL_DIR}/include/gl2ps)
 
 INSTALL(TARGETS gl2ps
-		ARCHIVE DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Release MinSizeRel RelWithDebInfo
-		LIBRARY DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Release MinSizeRel RelWithDebInfo
-		RUNTIME DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/bin/" CONFIGURATIONS Release MinSizeRel RelWithDebInfo
-		)
-		
-INSTALL(TARGETS gl2ps
-		ARCHIVE DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/libd/" CONFIGURATIONS "Debug"
-		LIBRARY DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/libd/" CONFIGURATIONS "Debug"
-		RUNTIME DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/bind/"  CONFIGURATIONS "Debug"
+		ARCHIVE DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
+		LIBRARY DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
+		RUNTIME DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/bin/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
 		)
